--- a/service-hi-two/src/main/resources/application.yml
+++ b/service-hi-two/src/main/resources/application.yml
@@ -1,9 +1,11 @@
+server:
+  port: 8763
+
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8771/eureka/
-server:
-  port: 8780
+
 spring:
   application:
-    name: service-ribbon
+    name: service-hi
