--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
 		<module>eureka-server</module>
 		<module>eureka-server-two</module>
 		<module>eureka-server-three</module>
+		<module>service-zuul</module>
+		<module>config-server</module>
 	</modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -46,6 +48,11 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>2.0.0.RELEASE</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
