--- a/eureka-server-two/src/main/resources/application.yml
+++ b/eureka-server-two/src/main/resources/application.yml
@@ -1,15 +1,13 @@
-server:
-  port: 8772
 eureka:
   instance:
-    hostname: eurkatwo #eureka·şÎñ¶ËµÄÊµÀıÃû³Æ
+    hostname: localhost #eurekaæœåŠ¡ç«¯çš„å®ä¾‹åç§°
   client:
-    registerWithEureka: true #false±íÊ¾²»Ïò×¢²áÖĞĞÄ×¢²á×Ô¼º¡£
-    fetchRegistry: false #false±íÊ¾×Ô¼º¶Ë¾ÍÊÇ×¢²áÖĞĞÄ£¬ÎÒµÄÖ°Ôğ¾ÍÊÇÎ¬»¤·şÎñÊµÀı£¬²¢²»ĞèÒªÈ¥¼ìË÷·şÎñ
+    registerWithEureka: false #falseè¡¨ç¤ºä¸å‘æ³¨å†Œä¸­å¿ƒæ³¨å†Œè‡ªå·±ã€‚
+    fetchRegistry: false #falseè¡¨ç¤ºè‡ªå·±ç«¯å°±æ˜¯æ³¨å†Œä¸­å¿ƒï¼Œæˆ‘çš„èŒè´£å°±æ˜¯ç»´æŠ¤æœåŠ¡å®ä¾‹ï¼Œå¹¶ä¸éœ€è¦å»æ£€ç´¢æœåŠ¡
     serviceUrl:
-      #µ¥»ú
+     #å•æœº
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-      #ÉèÖÃÓëEureka Server½»»¥µÄµØÖ·²éÑ¯·şÎñºÍ×¢²á·şÎñ¶¼ĞèÒªÒÀÀµÕâ¸öµØÖ·£¨µ¥»ú£©¡£
+      #è®¾ç½®ä¸Eureka Serveräº¤äº’çš„åœ°å€æŸ¥è¯¢æœåŠ¡å’Œæ³¨å†ŒæœåŠ¡éƒ½éœ€è¦ä¾èµ–è¿™ä¸ªåœ°å€ï¼ˆå•æœºï¼‰ã€‚
 spring:
   application:
-    name: eurka-server
+    name: eurka-server-two
